generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImGuiIO_t ImGuiIO;                                              
typedef int ImGuiKey;             
typedef int ImGuiMouseSource;     
typedef int ImGuiWindowFlags;       
typedef unsigned short ImWchar16;      
CIMGUI_API bool ImGui_Begin(const char* name, bool* p_open , ImGuiWindowFlags flags );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
struct ImGuiIO_t
{
    ImGuiConfigFlags  ConfigFlags;                                    
    ImGuiBackendFlags BackendFlags;                                   
    ImVec2            DisplaySize;                                    
    ImVec2            DisplayFramebufferScale;                        
    float             DeltaTime;                                      
    float             IniSavingRate;                                  
    const char*       IniFilename;                                    
    const char*       LogFilename;                                    
    void*             UserData;                                       
    ImFontAtlas*      Fonts;                                          
    ImFont*           FontDefault;                                    
    bool              FontAllowUserScaling;                           
    bool              ConfigNavSwapGamepadButtons;                    
    bool              ConfigNavMoveSetMousePos;                       
    bool              ConfigNavCaptureKeyboard;                       
    bool              ConfigNavEscapeClearFocusItem;                  
    bool              ConfigNavEscapeClearFocusWindow;                
    bool              ConfigNavCursorVisibleAuto;                     
    bool              ConfigNavCursorVisibleAlways;                   
    bool              MouseDrawCursor;                                
    bool              ConfigMacOSXBehaviors;                          
    bool              ConfigInputTrickleEventQueue;                   
    bool              ConfigInputTextCursorBlink;                     
    bool              ConfigInputTextEnterKeepActive;                 
    bool              ConfigDragClickToInputText;                     
    bool              ConfigWindowsResizeFromEdges;                   
    bool              ConfigWindowsMoveFromTitleBarOnly;              
    bool              ConfigWindowsCopyContentsWithCtrlC;             
    bool              ConfigScrollbarScrollByPage;                    
    float             ConfigMemoryCompactTimer;                       
    float             MouseDoubleClickTime;                           
    float             MouseDoubleClickMaxDist;                        
    float             MouseDragThreshold;                             
    float             KeyRepeatDelay;                                 
    float             KeyRepeatRate;                                  
    bool              ConfigErrorRecovery;                            
    bool              ConfigErrorRecoveryEnableAssert;                
    bool              ConfigErrorRecoveryEnableDebugLog;              
    bool              ConfigErrorRecoveryEnableTooltip;               
    bool              ConfigDebugIsDebuggerPresent;                   
    bool              ConfigDebugHighlightIdConflicts;                
    bool              ConfigDebugHighlightIdConflictsShowItemPicker;  
    bool              ConfigDebugBeginReturnValueOnce;                
    bool              ConfigDebugBeginReturnValueLoop;                
    bool              ConfigDebugIgnoreFocusLoss;                     
    bool              ConfigDebugIniSettings;                         
    const char*       BackendPlatformName;                            
    const char*       BackendRendererName;                            
    void*             BackendPlatformUserData;                        
    void*             BackendRendererUserData;                        
    void*             BackendLanguageUserData;                        
    bool              WantCaptureMouse;                               
    bool              WantCaptureKeyboard;                            
    bool              WantTextInput;                                  
    bool              WantSetMousePos;                                
    bool              WantSaveIniSettings;                            
    bool              NavActive;                                      
    bool              NavVisible;                                     
    float             Framerate;                                      
    int               MetricsRenderVertices;                          
    int               MetricsRenderIndices;                           
    int               MetricsRenderWindows;                           
    int               MetricsActiveWindows;                           
    ImVec2            MouseDelta;                                     
    ImGuiContext*     Ctx;                                            
    ImVec2            MousePos;                                       
    bool              MouseDown[5];                                   
    float             MouseWheel;                                     
    float             MouseWheelH;                                    
    ImGuiMouseSource  MouseSource;                                    
    bool              KeyCtrl;                                        
    bool              KeyShift;                                       
    bool              KeyAlt;                                         
    bool              KeySuper;                                       
    ImGuiKeyChord     KeyMods;                                        
    ImGuiKeyData      KeysData[ImGuiKey_NamedKey_COUNT];              
    bool              WantCaptureMouseUnlessPopupClose;               
    ImVec2            MousePosPrev;                                   
    ImVec2            MouseClickedPos[5];                             
    double            MouseClickedTime[5];                            
    bool              MouseClicked[5];                                
    bool              MouseDoubleClicked[5];                          
    ImU16             MouseClickedCount[5];                           
    ImU16             MouseClickedLastCount[5];                       
    bool              MouseReleased[5];                               
    double            MouseReleasedTime[5];                           
    bool              MouseDownOwned[5];                              
    bool              MouseDownOwnedUnlessPopupClose[5];              
    bool              MouseWheelRequestAxisSwap;                      
    bool              MouseCtrlLeftAsRightClick;                      
    float             MouseDownDuration[5];                           
    float             MouseDownDurationPrev[5];                       
    float             MouseDragMaxDistanceSqr[5];                     
    float             PenPressure;                                    
    bool              AppFocusLost;                                   
    bool              AppAcceptingEvents;                             
    ImWchar16         InputQueueSurrogate;                            
    ImVector_ImWchar  InputQueueCharacters;                           
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float             FontGlobalScale;                                
    const char* (*GetClipboardTextFn)(void* user_data);
    void (*SetClipboardTextFn)(void* user_data, const char* text);
    void*             ClipboardUserData;
#endif 
};
CIMGUI_API void ImGuiIO_AddKeyEvent(ImGuiIO* self, ImGuiKey key, bool down);                 
CIMGUI_API void ImGuiIO_AddKeyAnalogEvent(ImGuiIO* self, ImGuiKey key, bool down, float v);  
CIMGUI_API void ImGuiIO_AddMousePosEvent(ImGuiIO* self, float x, float y);                   
CIMGUI_API void ImGuiIO_AddMouseButtonEvent(ImGuiIO* self, int button, bool down);           
CIMGUI_API void ImGuiIO_AddMouseWheelEvent(ImGuiIO* self, float wheel_x, float wheel_y);     
CIMGUI_API void ImGuiIO_AddMouseSourceEvent(ImGuiIO* self, ImGuiMouseSource source);         
CIMGUI_API void ImGuiIO_AddFocusEvent(ImGuiIO* self, bool focused);                          
CIMGUI_API void ImGuiIO_AddInputCharacter(ImGuiIO* self, unsigned int c);                    
CIMGUI_API void ImGuiIO_AddInputCharacterUTF16(ImGuiIO* self, ImWchar16 c);                  
CIMGUI_API void ImGuiIO_AddInputCharactersUTF8(ImGuiIO* self, const char* str);              
CIMGUI_API void ImGuiIO_SetKeyEventNativeData(ImGuiIO* self, ImGuiKey key, int native_keycode, int native_scancode, int native_legacy_index ); 
CIMGUI_API void ImGuiIO_SetAppAcceptingEvents(ImGuiIO* self, bool accepting_events);         
CIMGUI_API void ImGuiIO_ClearEventsQueue(ImGuiIO* self);                                     
CIMGUI_API void ImGuiIO_ClearInputKeys(ImGuiIO* self);                                       
CIMGUI_API void ImGuiIO_ClearInputMouse(ImGuiIO* self);                                      