generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImGuiIO.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImGuiIO where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void AddFocusEvent(ImGuiIO* self, bool focused)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddFocusEvent"
  imGuiIO_AddFocusEvent :: (Ptr ImGuiIO) -> CBool -> IO ()
-- C: void AddInputCharacter(ImGuiIO* self, unsigned int c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddInputCharacter"
  imGuiIO_AddInputCharacter :: (Ptr ImGuiIO) -> CUInt -> IO ()
-- C: void AddInputCharacterUTF16(ImGuiIO* self, ImWchar16 c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddInputCharacterUTF16"
  imGuiIO_AddInputCharacterUTF16 :: (Ptr ImGuiIO) -> ImWchar16 -> IO ()
-- C: void AddInputCharactersUTF8(ImGuiIO* self, const char* str)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddInputCharactersUTF8"
  imGuiIO_AddInputCharactersUTF8 :: (Ptr ImGuiIO) -> CString -> IO ()
-- C: void AddKeyAnalogEvent(ImGuiIO* self, ImGuiKey key, bool down, float v)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddKeyAnalogEvent"
  imGuiIO_AddKeyAnalogEvent :: (Ptr ImGuiIO) -> ImGuiKey -> CBool -> CFloat -> IO ()
-- C: void AddKeyEvent(ImGuiIO* self, ImGuiKey key, bool down)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddKeyEvent"
  imGuiIO_AddKeyEvent :: (Ptr ImGuiIO) -> ImGuiKey -> CBool -> IO ()
-- C: void AddMouseButtonEvent(ImGuiIO* self, int button, bool down)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddMouseButtonEvent"
  imGuiIO_AddMouseButtonEvent :: (Ptr ImGuiIO) -> CInt -> CBool -> IO ()
-- C: void AddMousePosEvent(ImGuiIO* self, float x, float y)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddMousePosEvent"
  imGuiIO_AddMousePosEvent :: (Ptr ImGuiIO) -> CFloat -> CFloat -> IO ()
-- C: void AddMouseSourceEvent(ImGuiIO* self, ImGuiMouseSource source)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddMouseSourceEvent"
  imGuiIO_AddMouseSourceEvent :: (Ptr ImGuiIO) -> ImGuiMouseSource -> IO ()
-- C: void AddMouseWheelEvent(ImGuiIO* self, float wheel_x, float wheel_y)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_AddMouseWheelEvent"
  imGuiIO_AddMouseWheelEvent :: (Ptr ImGuiIO) -> CFloat -> CFloat -> IO ()
-- C: void ClearEventsQueue(ImGuiIO* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_ClearEventsQueue"
  imGuiIO_ClearEventsQueue :: (Ptr ImGuiIO) -> IO ()
-- C: void ClearInputKeys(ImGuiIO* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_ClearInputKeys"
  imGuiIO_ClearInputKeys :: (Ptr ImGuiIO) -> IO ()
-- C: void ClearInputMouse(ImGuiIO* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_ClearInputMouse"
  imGuiIO_ClearInputMouse :: (Ptr ImGuiIO) -> IO ()
-- C: void SetAppAcceptingEvents(ImGuiIO* self, bool accepting_events)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_SetAppAcceptingEvents"
  imGuiIO_SetAppAcceptingEvents :: (Ptr ImGuiIO) -> CBool -> IO ()
-- C: void SetKeyEventNativeData(ImGuiIO* self, ImGuiKey key, int native_keycode, int native_scancode, int native_legacy_index)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiIO_SetKeyEventNativeData"
  imGuiIO_SetKeyEventNativeData :: (Ptr ImGuiIO) -> ImGuiKey -> CInt -> CInt -> CInt -> IO ()
